Incorrect use of Content-Length when Content-Range has no complete-length field
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox127 | --- | fixed |
People
(Reporter: karlt, Assigned: karlt)
Details
Attachments
(1 file)
Since bug 1418430 was fixed, Gecko has intentionally accepted 206 Partial Content responses that do not fulfil the complete range requested. Such responses have a Content-Length header indicating the number of octets in the response body, which should not be interpreted as the entire resource length.
The effect is a media resource truncated at the end of the first partial response.
The check for zero mOffset would have been necessary when using Content-Length from (fully request-fulfilling) Partial Content responses, but is not necessary for 200 OK responses nor when using the complete-length field from Content-Range headers.
| Assignee | ||
Comment 1•4 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/f2306039790583a2c1f75888010d044600d75f82 moved some Content-Length usage to Content-Range.
| Assignee | ||
Comment 2•4 years ago
|
||
and use resource lengths available even when not the initial request.
This has the effect of using the most recent indication of resource length.
Description
•