Bug 1765025 don't get resource length from Content-Length of 206 Partial Content response with no complete-length r=padenot

and use resource lengths available even when not the initial request.
This has the effect of using the most recent indication of resource length.

Differential Revision: https://phabricator.services.mozilla.com/D146276